the issue with gap and shadow on Safari browser has been fixed

--- a/src/components/CalculateForm/CalculateForm.module.css
+++ b/src/components/CalculateForm/CalculateForm.module.css
@@ -10,7 +10,7 @@
 .inputWrapper{
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    /*gap: 15px;*/
 }
 .inputWrapper div{
     position: relative;
@@ -28,11 +28,18 @@
     padding: 10px 20px;
     border-radius: 100px;
     box-shadow: 3px 3px 8px 1px rgba(0, 0, 0, .3);
+    -webkit-box-shadow: 3px 3px 8px 1px rgba(0, 0, 0, .3);
+    -webkit-appearance: none;
+    -moz-box-shadow: 3px 3px 8px 1px rgba(0, 0, 0, .3);
     margin-right: 10px;
+    margin-bottom: 15px;
 }
+
 .inputWrapper .fieldError{
     border: 2px solid red;
     box-shadow: 3px 3px 8px 1px rgba(255, 0, 0, .3);
+    -webkit-box-shadow: 3px 3px 8px 1px rgba(255, 0, 0, .3);
+    -moz-box-shadow: 3px 3px 8px 1px rgba(255, 0, 0, .3);
 }
 
 .submitButton{
@@ -45,7 +52,6 @@
 
 .result{
     display: flex;
-    margin-top: 15px;
     margin-left: 12px;
     margin-right: 10px;
     padding: 5px 7px;
